<resources>
    <string name="app_name">SMILZ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me Logged In</string>
    <string name="login">Login</string>
    <string name="dont_have_account_sign_up">Dont have account? Sign Up!</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="role">Role</string>
    <string name="loja_social_de_s_o_l_zaro_e_s_o_jo_o_do_souto">Loja Social de São Lázaro e São João do Souto</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="homepage">Homepage</string>
    <string name="bem_vindo_smilz">Bem-Vindo à SMILZ</string>
    <string name="logout">Logout</string>
    <string name="perfil">Perfil</string>
    <string name="estatisticas">Estatisticas</string>
    <string name="escalas">Escalas</string>
    <string name="beneficiarios">Beneficiarios</string>
    <string name="home">Home</string>

    <string-array name="anos">
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <!-- Adicione todos os meses -->
    </string-array>
    <string-array name="nacionalidades">
        <item>Todas</item>
        <item>Portuguesa</item>
        <item>Brasileira</item>
        <item>Angolana</item>
        <!-- Adicione outras nacionalidades relevantes -->
    </string-array>

</resources>