<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:backgroundTint="@color/white"
            app:navigationIcon="@drawable/baseline_menu_24"
            app:layout_constraintTop_toTopOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="20dp"
            android:layout_marginLeft="5dp"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/smilzlogo"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loja_social_de_s_o_l_zaro_e_s_o_jo_o_do_souto"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/grey"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/text_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_bemvindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo_smilz"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/text_homepage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>
